// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Purebas en GifGrid Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
    Hola
  </h2>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://local/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Purebas en GifGrid Debe mostrarse correctamente 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
    Hola
  </h2>
  <p>
    Loading... 
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
